# Quantum-Computing

./: README.md  pyproject.toml
6. Quantum Algorithms/: quantum_query_algorithms.ipynb
Chapter 2. Fundamental mathematics of quantum mechanics/1. Representing a qubit/: 3. Representing_qubit_states.ipynb
